--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -297,7 +297,7 @@
         </div>
         <div class="box character-dice_pool">
             <div class="dice_pool-grid">
-                <div class="dice_pool-box1 header"><h1 data-i18n="dice-pool-u">DICE POOL</h1></div>
+                <div class="dice_pool-box1 header"><h1 data-i18n="dice-pool">DICE POOL</h1></div>
                 <div class="grid-item">
                     <span class="label" data-i18n="attribute-score">Attribute Score</span>
                     <input type="radio" name="attr_base" value="6" class="dice-selection attribute" /><span title="6"></span>
@@ -700,75 +700,38 @@
 </div>
 
 <div class="wrapper tab-content ark">
+    <div class="grid ark-details-grid">
+        <input class="input-number" type="hidden" name="attr_ark_battle_level" value="0" />
+        <div class="box ark-info-grid">
+            <h1 data-i18n="ark-u">Ark</h1>
+            <span class="label" data-i18n="type">Type</span>
+            <input class="input-number" type="text" name="attr_ark_name" value="" title="@{ark_name}" />
+            <span class="label" data-i18n="coordinates">Coordinates</span>
+            <input class="input-number" type="text" name="attr_ark_coordinates" value="" title="@{ark_coordinates}" />
+            <hr />
+            <span class="label" data-i18n="battle-level">Battle Level</span>
+            <input class="input-number" type="hidden" name="attr_ark_battle_level" value="0" title="@{ark_battle_level}" />
+            <span name="attr_ark_battle_level"></span>
+            <button class="dicefontd6" name="Battle Level" title="Battle Level" type="roll" value="&{template:rolls} {{character_name=^{ark-u}}} {{name=^{battle-level}}} ">L</button>
+            <span class="label" data-i18n="description">Description</span>
+            <textarea class="input-textarea" name="attr_ark_description" title="@{ark_description}"></textarea>
+        </div>
+        <div class="box ark-development-grid">
+            <h1 data-i18n="dev-level">Development Levels</h1>
+            <span class="label" data-i18n="food-supply">Food Supply</span>
+            <input class="input-number" type="number" name="attr_ark_food_supply" value="" title="@{ark_food_supply}" />
+            <hr>
+            <span class="label" data-i18n="culture">Culture</span>
+            <input class="input-number" type="number" name="attr_ark_culture" value="" title="@{ark_culture}" />
+            <hr>
+            <span class="label" data-i18n="technology">Technology</span>
+            <input class="input-number" type="number" name="attr_ark_technology" value="" title="@{ark_technology}" />
+            <hr>
+            <span class="label" data-i18n="warfare">Warfare</span>
+            <input class="input-number" type="number" name="attr_ark_warfare" value="" title="@{ark_warfare}" />
+        </div>
+    </div>
     <div class="ark-grid">
-        <div class="box ark-details">
-            <div class="ark-details-grid">
-                <div class="ark-details-box1 header">
-                    <h1 data-i18n="ark-u">ark</h1>
-                </div>
-                <div class="ark-details-box2"><span class="label" data-i18n="name">Name</span></div>
-                <div class="ark-details-box3">
-                    <input class="input-number" type="text" name="attr_ark_name" value="" title="@{ark_name}" />
-                </div>
-                <div class="ark-details-box4"><span class="label" data-i18n="location">Location</span></div>
-                <div class="ark-details-box5">
-                    <input class="input-number" type="text" name="attr_ark_location" value="" title="@{ark_location}" />
-                </div>
-                <div class="ark-details-box6"><span class="label" data-i18n="defense-rating">Defense Rating</span></div>
-                <div class="ark-details-box7">
-                    <input class="input-number" type="number" name="attr_ark_dr" value="0" title="@{ark_dr}" />
-                </div>
-                <div class="ark-details-box8"><span class="label" data-i18n="description">Description</span></div>
-                <div class="ark-details-box9">
-                    <textarea class="input-textarea" name="attr_ark_description" title="@{ark_description}"></textarea>
-                </div>
-            </div>
-        </div>
-        <div class="box ark-functions">
-            <div class="ark-functions-grid">
-                <div class="ark-functions-box header">
-                    <h1 data-i18n="function-u">FUNCTIONS</h1>
-                </div>
-                <div class="ark-functions-box1 column-header"><span data-i18n="name">Name</span></div>
-                <div class="ark-functions-box2 column-header"><span data-i18n="number-abbr">Num</span></div>
-                <div class="ark-functions-box3 column-header"><span data-i18n="production-outcome">Production/Outcome</span></div>
-                <div class="ark-functions-box4">
-                    <fieldset class="repeating_functions">
-                        <div class="ark-functions-grid">
-                            <input class="ark-functions-box1 input" type="text" name="attr_function_name" value="" title="@repeating_functions_$X_function_name}" />
-                            <input class="ark-functions-box2 input-number" type="text" name="attr_function_number" value="" title="@{repeating_functions_$X_function_number}" />
-                            <textarea class="ark-functions-box3 input-textarea" name="attr_function_production" title="@{repeating_functions_$X_function_production}"></textarea>
-                        </div>
-                    </fieldset>
-                </div>
-            </div>
-        </div>
-        <div class="box ark-hirelings">
-            <div class="ark-hirelings-grid">
-                <div class="ark-hirelings-box header">
-                    <h1 data-i18n="hirelings-u">HIRELINGS</h1>
-                </div>
-                <div class="ark-hirelings-box1 column-header"><span data-i18n="profession">Profession</span></div>
-                <div class="ark-hirelings-box2 column-header"><span data-i18n="number-abbr">Num</span></div>
-                <div class="ark-hirelings-box3 column-header"><span data-i18n="salary">Salary</span></div>
-                <div class="ark-hirelings-box4">
-                    <fieldset class="repeating_hirelings">
-                        <div class="ark-hirelings-grid">
-                            <input class="ark-hirelings-box1 input" type="text" name="attr_hireling_name" value="" title="@{repeating_hirelings_$X_hireling_name}" />
-                            <input class="ark-hirelings-box2 input-number" type="text" name="attr_hireling_number" value="1" title="@{repeating_hirelings_$X_hireling_number}" />
-                            <input class="ark-hirelings-box3 input" type="text" name="attr_hireling_salary" value="" title="@{repeating_hirelings_$X_hireling_production}" />
-                        </div>
-                    </fieldset>
-                </div>
-            </div>
-        </div>
-        <div class="box ark-stockpile">
-            <div class="ark-stockpile-grid" data-i18n-list="stockpile-list">
-                <div class="ark-stockpile-box1 header">
-                    <h1 data-i18n="stockpile-u">STOCKPILE</h1>
-                </div>
-            </div>
-        </div>
         <div class="box ark-notes">
             <div class="ark-notes-grid">
                 <div class="ark-notes-box1 header">
