uc-58:charmancer translation

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -16689,7 +16689,7 @@
         </div> -->
         <div class="bottombar">
             <button class="prev" type="cancel" value="l1-cancel" data-i18n="opt-out-u">OPT OUT</button>
-            <button type="button" data-scroll="#top" class="jump" data-i18n="charmancer-back-to-top">Back to Top</button>
+            <button type="button" data-scroll="#top" class="jump" data-i18n="back-to-top">Back to Top</button>
             <button class="next" type="back" value="l1-race" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
@@ -16869,7 +16869,7 @@
                 </div>
                 <div class="choice row race_possible custom_race custom_subrace">
                     <label><span data-i18n="innate-spellcasting:">Innate Spellcasting:</span> 
-                        <label><span data-i18n="spellcasting-ability:">Spellcasting Ability:</span> 
+                        <label><span data-i18n="spellcasting-ability">Spellcasting Ability:</span> 
                             <select name="comp_custom_race_spell_ability">
                                 <option value="" data-i18n="choose">Choose</option>
                                 <option value="Strength" data-i18n="strength">Strength</option>
@@ -16880,10 +16880,10 @@
                                 <option value="Charisma" data-i18n="charisma">Charisma</option>
                             </select>
                         </label>
-                        <label class="hilite choice custom_spellcasting"><span data-i18n="number-of-cantrips:">Number of Cantrips:</span>
+                        <label class="hilite choice custom_spellcasting"><span data-i18n="number-of-cantrips">Number of Cantrips:</span>
                             <input type="number" name="comp_custom_race_spell_number" min="1" value="1" required>
                         </label>
-                        <label class="hilite choice custom_spellcasting"><span data-i18n="spell-list:">Spell List:</span>
+                        <label class="hilite choice custom_spellcasting"><span data-i18n="spell-list">Spell List:</span>
                             <select name="comp_custom_race_spell_list" required>
                                 <option value="" data-i18n="choose">Choose</option>
                                 <option value="bard" data-i18n="bard">Bard</option>
@@ -16909,7 +16909,7 @@
             <button class="next" type="back" value="l1-class" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-race" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue" data-i18n="continue-charmancer">Continue Charactermancer</button>
@@ -17068,7 +17068,7 @@
             <button class="next" type="back" value="l1-abilities" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-class" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -17190,7 +17190,7 @@
             <button class="next" type="back" value="l1-background" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-spells" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -17213,7 +17213,7 @@
                     </select>
                 </label>
                 <div class="choice custom_background">
-                    <label class="hilite"><span data-i18n="name">Name</span>:
+                    <label class="hilite"><span data-i18n="name-background">Name:</span>:
                         <input type="text" name="comp_background_name" placeholder="Artisan" required>
                     </label>
                 </div>
@@ -17295,7 +17295,7 @@
             <button class="next" type="back" value="l1-equipment" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-spells" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -17329,7 +17329,7 @@
                     <span class="label" data-i18n="you-have-created-custom-class">You have created a custom class; you can add equipment to the character sheet after you have finished the Charactermancer.</span>
                 </p>
                 <p class="choice no_gold_option">
-                    <span class="label" data-i18n="pick-your-equipment:">Pick your equipment.</span>
+                    <span class="label" data-i18n="pick-your-equipment">Pick your equipment:</span>
                     <span data-i18n="class">Class</span>: (<span class="class_label"></span>)
                 </p>
                 <div class="choice has_class equipment_type hilite">
@@ -17456,7 +17456,7 @@
             <button class="next" type="back" value="l1-spells" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-spells" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -17485,7 +17485,7 @@
             <button class="next" type="back" value="l1-feat" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-spells" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -17674,7 +17674,7 @@
             <button class="next" type="back" value="l1-bio" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-feat" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -17738,7 +17738,7 @@
             <button class="next" type="back" value="l1-summary" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-bio" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -17829,7 +17829,7 @@
             <button class="next choice apply_changes" type="finish" value="l1-mancer" data-i18n="apply-changes">Apply Changes</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="l1-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="cancel" value="l1-spells" data-i18n="save_progress_and_exit">Save and Exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
@@ -18098,7 +18098,7 @@
             <button class="next" type="back" value="lp-choices" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="lp-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
             <p class="warning"><span data-i18n="charmancer-discard-warning">Discard and Exit will discard all choices you’ve made in Charactermancer and let you edit your character sheet directly.</span></p>
@@ -18147,7 +18147,7 @@
             <button class="next" type="action" name="act_lp-choices_next" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="lp-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
             <p class="warning"><span data-i18n="charmancer-discard-warning">Discard and Exit will discard all choices you’ve made in Charactermancer and let you edit your character sheet directly.</span></p>
@@ -18173,7 +18173,7 @@
             <button class="next" type="action" name="act_lp-asi_next" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="lp-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
             <p class="warning"><span data-i18n="charmancer-discard-warning">Discard and Exit will discard all choices you’ve made in Charactermancer and let you edit your character sheet directly.</span></p>
@@ -18203,7 +18203,7 @@
             <button class="next" type="back" value="lp-summary" data-i18n="next">Next</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="lp-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
             <p class="warning"><span data-i18n="charmancer-discard-warning">Discard and Exit will discard all choices you’ve made in Charactermancer and let you edit your character sheet directly.</span></p>
@@ -18240,7 +18240,7 @@
             <button class="next choice apply_changes" type="finish" value="lp-mancer" data-i18n="apply-changes">Apply Changes</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="lp-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
             <p class="warning"><span data-i18n="charmancer-discard-warning">Discard and Exit will discard all choices you’ve made in Charactermancer and let you edit your character sheet directly.</span></p>
@@ -18268,7 +18268,7 @@
             <button class="next" type="action" name="act_lp-spellchoice_back" data-i18n="accept">Accept</button>
         </div>
         <div class="choice cancel-prompt">
-            <p class="label" data-i18n="charmancer-where-would-you-like-to-go">Where would you like to go, Traveler?</p>
+            <p class="label" data-i18n="charmancer-cancel-heading">Where would you like to go, Traveler?</p>
             <button class="warning" type="cancel" value="lp-cancel" data-i18n="cancel_charactermancer">Discard and exit</button>
             <button type="action" name="act_continue"><span data-i18n="continue-charmancer">Continue Charactermancer</span></button>
             <p class="warning"><span data-i18n="charmancer-discard-warning">Discard and Exit will discard all choices you’ve made in Charactermancer and let you edit your character sheet directly.</span></p>
