fix json and add missing tags

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -16803,7 +16803,7 @@
                 <div class="race_holder holder"></div>
                 <div class="choice subrace">
                     <div class="row">
-                        <label class="hilite"><span data-i18n="subrace:">Subrace:</span>
+                        <label class="hilite"><span data-i18n="subrace">Subrace:</span>
                             <select class="choose_subrace" name="comp_subrace" required>
                                 <option value="" data-i18n="choose">Choose</option>
                                 <option class="custom" value="Rules:Races" data-i18n="custom">Custom</option>
