upated injuries, broke weapons

--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -8,43 +8,11 @@
 
 <div class="wrapper tab-content character">
     <div class="box character-details">
-        <div class="details-grid">
-            <div class="details-box1"><span class="label" data-i18n="name">Name</span></div>
-            <div class="details-box2">
-                <input class="input" type="text" name="attr_character_name" value="" title="@{character_name}" />
-            </div>
-            <div class="details-box3"><span class="label" data-i18n="role">Role</span></div>
-            <div class="details-box4">
-                <input class="input" type="text" name="attr_role" value="" title="@{role}" />        
-            </div>
-            <div class="conditions-grid">                
-                <div class="conditions-box2">
-                    <input class="input xbox conditions-starving" type="checkbox" name="attr_hungry" value="1" title="@{starving}" /><span></span>
-                </div>
-                <input class="conditions-starving" type="checkbox" name="attr_hungry" value="1" style="display:none;" />
-                <div class="conditions-box3"><span class="header-h1 conditions-starving" data-i18n="starving">Starving</span></div>
-            </div>
-            <div class="conditions-grid"> 
-                <div class="conditions-box4">
-                    <input class="input xbox conditions-sleepless" type="checkbox" name="attr_sleepy" value="1" title="@{sleepless}" /><span></span>
-                </div>
-                <input class="conditions-sleepless" type="checkbox" name="attr_sleepy" value="1" style="display:none;" />
-                <div class="conditions-box5"><span class="header-h1 conditions-sleepless" data-i18n="sleepless">Sleepless</span></div>
-            </div>
-            <div class="conditions-grid">    
-                <div class="conditions-box6">
-                    <input class="input xbox conditions-dehydrated" type="checkbox" name="attr_thirsty" value="1" title="@{dehydrated}" /><span></span>
-                </div>
-                <input class="conditions-dehydrated" type="checkbox" name="attr_thirsty" value="1" style="display:none;" />
-                <div class="conditions-box7"><span class="header-h1 conditions-dehydrated" data-i18n="dehydrated">Dehydrated</span></div>
-            </div>
-            <div class="conditions-grid"> 
-                <div class="conditions-box8">
-                    <input class="input xbox conditions-hypothermic" type="checkbox" name="attr_cold" value="1" title="@{hypothermic}" /><span></span>
-                </div>
-                <input class="conditions-hypothermic" type="checkbox" name="attr_cold" value="1" style="display:none;" />
-                <div class="conditions-box9"><span class="header-h1 conditions-hypothermic" data-i18n="hypothermic">Hypothermic</span></div>
-            </div>            
+        <div class="grid details-grid">
+            <span class="label" data-i18n="name">Name</span>
+            <input class="input" type="text" name="attr_character_name" value="" title="@{character_name}" />
+            <span class="label" data-i18n="role">Role</span>
+            <input class="input" type="text" name="attr_role" value="" title="@{role}" />               
         </div>
     </div>
     <div class="grid character-grid">
@@ -148,11 +116,21 @@
             </div>                    
         </div>        
         <div class="box character-injuries">
-			<div class="injuries-grid">
-				<div class="injuries-box1 header">
+			<div class="grid injuries-grid">
+				<div class="injuries-header header">
                     <h1 data-i18n="critical-u">CRITICAL INJURIES</h1>
-                </div>		
-                <div class="injuries-box7">
+                </div>             
+                <input class="input xbox" type="checkbox" name="attr_hungry" value="1" title="@{starving}" /><span></span>
+                <span class="header-h1" data-i18n="starving">Starving</span>
+                <input class="input xbox" type="checkbox" name="attr_sleepy" value="1" title="@{sleepless}" /><span></span>
+                <span class="header-h1" data-i18n="sleepless">Sleepless</span>
+                <hr />
+                <input class="input xbox" type="checkbox" name="attr_thirsty" value="1" title="@{dehydrated}" /><span></span>
+                <span class="header-h1" data-i18n="dehydrated">Dehydrated</span>
+                <input class="input xbox" type="checkbox" name="attr_cold" value="1" title="@{hypothermic}" /><span></span>
+                <span class="header-h1" data-i18n="hypothermic">Hypothermic</span>
+                <hr />		
+                <div class="injuries-box">
                     <fieldset class="repeating_injuries">
                         <button class="toggles toggles-repeating" name="act_settings" type="action">y</button>
                         <input class="display" name="attr_reveal" type="hidden" value="display,settings," />
@@ -161,21 +139,21 @@
                             <span name="attr_injury_display"></span>
                         </div>
                         <div class="grid settings injuries-grid">
-                            <label class="injuries-box2" data-i18n="injury">Injury</label>
-                            <input type="text" class="injuries-box8 input" name="attr_injury_name" placeholder="Broken Leg" title="@{repeating_injuries_$X_injury_name}" value="" />
-                            <label class="injuries-box3">Lethal</label>
-                            <select class="injuries-box9 input" name="attr_injury_lethal" title="@{repeating_injuries_$X_injury_lethal}" value="">
+                            <label data-i18n="injury">Injury</label>
+                            <input type="text" class="input" name="attr_injury_name" placeholder="Broken Leg" title="@{repeating_injuries_$X_injury_name}" value="" />
+                            <label data-i18n="lethal">Lethal</label>
+                            <select class="input" name="attr_injury_lethal" title="@{repeating_injuries_$X_injury_lethal}" value="">
                                 <option value="no" data-i18n="no">No</option>
                                 <option value="yes" data-i18n="yes">Yes</option>
                                 <option value="yes -1" data-i18n="yes-1">Yes,-1</option>
                                 <option value="" data-i18n="not-applicable-abbr" selected>-</option>
                             </select>
-                            <label class="injuries-box4" data-i18n="time-limit">Time Limit</label>
-                            <input type="text" class="injuries-box10 input" name="attr_injury_time_limit" placeholder="-" title="@{repeating_injuries_$X_injury_time_limit}" value="" />
-                            <label class="injuries-box5" data-i18n="effects">Effects</label>
-                            <input type="text" class="injuries-box11 input" name="attr_injury_effects" placeholder="−2 to Move and Sneak." title="@{repeating_injuries_$X_injury_effects}" value="" />
-                            <label class="injuries-box6" data-i18n="healing-time">Heal Time</label>
-                            <input type="text" class="injuries-box12 input" name="attr_injury_heal_time" placeholder="3d6" title="@{repeating_injuries_$X_injury_heal_time}" value="" />
+                            <label data-i18n="time-limit">Time Limit</label>
+                            <input type="text" class="input" name="attr_injury_time_limit" placeholder="-" title="@{repeating_injuries_$X_injury_time_limit}" value="" />
+                            <label data-i18n="effects">Effects</label>
+                            <input type="text" class="input" name="attr_injury_effects" placeholder="−2 to Move and Sneak." title="@{repeating_injuries_$X_injury_effects}" value="" />
+                            <label data-i18n="healing-time">Heal Time</label>
+                            <input type="text" class="input" name="attr_injury_heal_time" placeholder="3d6" title="@{repeating_injuries_$X_injury_heal_time}" value="" />
                         </div>
                     </fieldset>
                 </div>
@@ -426,31 +404,24 @@
             </div>
         </div>
         <div class="box character-weapons">
-            <div class="weapons-grid">
+            <div class="grid weapons-grid">
                 <div class="weapons-box header"><h1 data-i18n="weapon-u">WEAPONS</h1></div>
-                <div class="weapons-box1 column-header"></div>
-                <div class="weapons-box2 column-header"><span data-i18n="name">Name</span></div>                
-                <div class="weapons-box3 column-header"><span data-i18n="grip">Grip</span></div>
-                <div class="weapons-box4 column-header"><span data-i18n="skill">Skill</span></div>
-                <div class="weapons-box5 column-header"><span data-i18n="bonus">Bonus</span></div>
-                <div class="weapons-box6 column-header"><span data-i18n="dmg-abbr">Dmg</span></div>
-                <div class="weapons-box7 column-header"><span data-i18n="range">Range</span></div>
-                <div class="weapons-box8 column-header"><span data-i18n="features">Features</span></div>
+                <span class="column-header" data-i18n="name">Name</span>      
+                <span class="column-header" data-i18n="skill">Skill</span>
+                <span class="column-header" data-i18n="bonus">Bonus</span>
+                <span class="column-header" data-i18n="dmg-abbr">Dmg</span>
+                <span class="column-header" data-i18n="range">Range</span>
+                <span class="column-header" data-i18n="features">Features</span>
                 <div class="weapons-box9">
                     <fieldset class="repeating_weapons">
                         <div class="weapons-grid">
-                            <button class="weapons-box11 roll-button dicefontd6" type="action" name="act_attack-roll" title="Update Dice Pool">L</button>
-                            <input class="weapons-box12 input" type="text" name="attr_weapon_name" value="" title="@{repeating_weapons_$X_weapon_name}" />                            
-                            <select class="weapons-box13 input" name="attr_weapon_grip" title="@{repeating_weapons_$X_weapon_grip}" title="@{repeating_weapons_$X_weapon_grip}">
-                                <option data-i18n="not-applicable-abbr" value="n/a">n/a</option>
-                                <option data-i18n="one-hand-abbr" value="1H" selected>1H</option>
-                                <option data-i18n="two-hand-abbr" value="2H">2H</option>
-                            </select>
-                            <select class="weapons-box14 input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
+                            <button class="roll-button dicefontd6" type="action" name="act_attack-roll" title="Update Dice Pool">L</button>
+                            <input class="input" type="text" name="attr_weapon_name" value="" title="@{repeating_weapons_$X_weapon_name}" />
+                            <select class="input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
                                 <option value="0" selected data-i18n="fight">Fight</option>
                                 <option value="1" data-i18n="shoot">Shoot</option>
                             </select>
-                            <select class="weapons-box15 input" name="attr_weapon_bonus" title="@{repeating_weapons_$X_weapon_bonus}">
+                            <select class="input" name="attr_weapon_bonus" title="@{repeating_weapons_$X_weapon_bonus}">
                                 <option value="0">0</option>
                                 <option value="1" selected>1</option>
                                 <option value="2">2</option>
@@ -465,14 +436,14 @@
                                 <option value="11">11</option>
                                 <option value="12">12</option>
                             </select>
-                            <input class="weapons-box17 input-number" type="number" name="attr_weapon_damage" value="1" min="0" title="@{repeating_weapons_$X_weapon_damage}" />
-                            <select class="weapons-box18 input" name="attr_weapon_range" title="@{repeating_weapons_$X_weapon_range}">
+                            <input class="input-number" type="number" name="attr_weapon_damage" value="1" min="0" title="@{repeating_weapons_$X_weapon_damage}" />
+                            <select class="input" name="attr_weapon_range" title="@{repeating_weapons_$X_weapon_range}">
                                 <option value="Arm" selected data-i18n="arms-length-abbr">Arm's L.</option>
                                 <option value="Near" data-i18n="near">Near</option>
                                 <option value="Short" data-i18n="short">Short</option>
                                 <option value="Long" data-i18n="long">Long</option>
                             </select>
-                            <input class="weapons-box19 input" type="text" name="attr_weapon_features" value="" title="@{repeating_weapons_$X_weapon_features}" />
+                            <input class="input" type="text" name="attr_weapon_features" value="" title="@{repeating_weapons_$X_weapon_features}" />
                         </div>
                     </fieldset>
                 </div>
