--- a/Mythras/Mythras.html
+++ b/Mythras/Mythras.html
@@ -8835,6 +8835,67 @@
                 </div>
             </div>
 
+            <!-- Mook/Compact Equipment -->
+            <div class="compact-equipment-section nonspirit-value">
+                <div class="header-bar">
+                    <div class="equipment-row">
+                        <div class="equipment-item header"><span data-i18n="item-u">Item</span></div>
+                        <div class="equipment-btn header"></div>
+                        <div class="equipment-location header"><span data-i18n="location-u">Location</span></div>
+                        <div class="equipment-number header"><span data-i18n="enc-u">ENC</span></div>
+                        <div class="equipment-number header"><span data-i18n="quantity-short-u">Qty</span></div>
+                    </div>
+                </div>
+                <fieldset class="repeating_equipment">
+                    <div class="equipment-row rep-row">
+                        <div class="equipment-item header"><input type="text" class="full-width" name="attr_name"></div>
+                        <div class="equipment-btn header"><button type="roll" class="reduced-size info-btn full-width" name="roll_effect" value="@{macro}"></div>
+                        <div class="equipment-location header">
+                            <select class="full-width" name="attr_location">
+                                <option value="loadout" data-i18n="loadout-u" selected>Loadout</option>
+                                <option value="pack" data-i18n="pack-u">Pack</option>
+                                <option value="mount" data-i18n="mount-vehicle-u">Mount/Vehicle</option>
+                                <option value="camp" data-i18n="camp-u">Camp</option>
+                                <option value="stash" data-i18n="stash-u">Stash</option>
+                                <option value="homebase" data-i18n="homebase-u">Homebase</option>
+                            </select>
+                        </div>
+                        <div class="equipment-number header"><input type="number" step="any" class="full-width" name="attr_enc" value="0"></div>
+                        <div class="equipment-number header"><input type="number" class="full-width" name="attr_quantity" value="1"></div>
+                    </div>  <input type="checkbox" class="details-toggle" name="attr_str_details"><span class="details-toggle"></span>
+                    <div class="details">
+                        <div><span data-i18n="traits-u">Traits</span>:</div>
+                        <div><textarea type="text" class="full-width equipment-traits" name="attr_traits"></textarea></div>
+                        <div><span data-i18n="description-u">Description</span>:</div>
+                        <div><textarea type="text" class="full-width equipment-description" name="attr_description"></textarea></div>
+                        <div><span data-i18n="macro-u">Macro</span>:</div>
+                        <div><textarea type="text" class="full-width equipment-macro" name="attr_macro">@{roll_display}&{template:effect} {{name=@{name}}} @{name_display} {{traits=@{traits}}} {{description=@{description}}}</textarea></div>
+                    </div>
+                </fieldset>
+                <div><span class="bold" data-i18n="notes-u">Notes</span>:</div>
+                <textarea class="full-width" name="attr_equipment_notes"></textarea>
+            </div>
+
+            <!-- Money & Wealth -->
+            <div class="compact-money-section nonspirit-value">
+                <div class="header-bar">
+                    <div class="wealth-currency header"><span data-i18n="currency-u">Currency</span></div>
+                    <div class="wealth-number header"><span data-i18n="value-u">Value</span></div>
+                    <div class="wealth-number header"><span data-i18n="enc-u">ENC</span></div>
+                    <div class="wealth-number header"><span data-i18n="quantity-short-u">Qty</span></div>
+                </div>
+                <fieldset class="repeating_currency">
+                    <div class="rep-row">
+                        <div class="wealth-currency header"><input type="text" class="full-width" name="attr_name"></div>
+                        <div class="wealth-number header"><input type="number" class="full-width" name="attr_value" value="1"></div>
+                        <div class="wealth-number header"><input type="number" step="any" class="full-width" name="attr_enc" value="0"></div>
+                        <div class="wealth-number header"><input type="number" class="full-width" name="attr_quantity" value="1"></div>
+                    </div>
+                </fieldset>
+                <div class="bold"><span data-i18n="other-u">Other</span>:</div>
+                <textarea name="attr_wealth_other"></textarea>
+            </div>
+
         </div>
     </div>
 
